# plugindepot-core

./: Cargo.toml  FFI_GUIDE.md  LICENSE.md  README.md
examples/: csharp_example.cs  swift_example.swift
include/: plugindepot_core.h
src/: ffi.rs  icons.rs  lib.rs  operations.rs  plugin.rs  registry.rs
