[package]
name = "plugindepot-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "plugindepot_core"
crate-type = ["rlib"]

[[bin]]
name = "plugindepot"
path = "src/bin/plugindepot.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"